# dieharder

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NOTES  README  README.md  aclocal.m4  autogen.sh  build.sh  config.h.in  config.status  configure  configure.ac  dieharder.abs  dieharder.html.in  dieharder.spec.in  restore.sh
.github/workflows/: c-cpp.yml
RDieHarder/: DESCRIPTION  DESCRIPTION.in  hiddenNAMESPACEhidden
RDieHarder/R/: dieharder.R  zzz.R
RDieHarder/inst/doc/: .RData  .Rhistory  RDieHarder.Rnw  RDieHarder.Rnw.orig  RDieHarder.aux  RDieHarder.bbl  RDieHarder.bib  RDieHarder.blg  RDieHarder.out  RDieHarder.tex  Rplots.ps  sweave
RDieHarder/inst/doc/auto/: RDieHarder.el
RDieHarder/man/: dieharder.Rd
RDieHarder/tests/: RDieHarder.R  RDieHarder.Rout.save
debian/: changelog  control  copyright  dieharder.lintian-overrides  libdieharder-dev.dirs  libdieharder-dev.files  libdieharder3.files  libdieharder3.postinst  rules  source.lintian-overrides  watch
debian/patches/: build_setup  series
dieharder/: Makefile  Makefile.am  Makefile.am.old  Makefile.am.rej  Makefile.in  NOTES  add_my_types.c  add_ui_rngs.c  add_ui_tests.c  choose_rng.c  configure.ac  dieharder.1  dieharder.c  dieharder.h  dieharder.h.orig  dieharder.h.rej  empty_random.c  example.input  generator_list  globals.c  gnu_r_rngs.c  help.c  histogram.c  list_rngs.c  list_tests.c  output.c  output.h  output_rnds.c  parsecl.c  rdieharder.c  report.c  run_all_tests.c  run_diehard_2dsphere.c  run_diehard_3dsphere.c  run_diehard_birthdays.c  run_diehard_bitstream.c  run_diehard_count_1s_byte.c  run_diehard_count_1s_stream.c  run_diehard_craps.c  run_diehard_dna.c  (+36 more)
dieharder/.deps/: add_ui_rngs.Po  dieharder.Po  dieharder_exit.Po  dieharder_types.Tpo  help.Po  histogram.Po  list_rand.Po  list_rngs.Po  list_tests.Po  output.Po  output_rnds.Po  parsecl.Po  report.Po  rng_empty_random.Po  run_diehard_2dsphere.Po  run_diehard_3dsphere.Po  run_diehard_birthdays.Po  run_diehard_bitstream.Po  run_diehard_count_1s_byte.Po  run_diehard_count_1s_stream.Po  run_diehard_craps.Po  run_diehard_dna.Po  run_diehard_operm5.Po  run_diehard_opso.Po  run_diehard_oqso.Po  run_diehard_parking_lot.Po  run_diehard_rank_32x32.Po  run_diehard_rank_6x8.Po  run_diehard_runs.Po  run_diehard_squeeze.Po  run_diehard_sums.Po  run_marsaglia_tsang_gcd.Po  run_rgb_bitdist.Po  run_rgb_lagged_sums.Po  run_rgb_minimum_distance.Po  run_rgb_operm.Po  run_rgb_permutations.Po  run_rgb_persist.Po  run_rgb_timing.Po  run_sts_monobit.Po  (+9 more)
dieharder/autom4te.cache/: output.0  traces.0
include/: Makefile  Makefile.am  Makefile.in  ilist
include/dieharder/: Dtest.h  Vtest.h  Xtest.h  add_lib_rngs.h  brg_endian.h  copyright.h  dab_birthdays1.h  dab_bytedistrib.h  dab_dct.h  dab_filltree.h  dab_filltree2.h  dab_monobit2.h  dab_opso2.h  diehard_2dsphere.h  diehard_3dsphere.h  diehard_birthdays.h  diehard_bitstream.h  diehard_count_1s_byte.h  diehard_count_1s_stream.h  diehard_craps.h  diehard_dna.h  diehard_operm5.h  diehard_opso.h  diehard_oqso.h  diehard_parking_lot.h  diehard_predict_mersenne.h  diehard_rank_32x32.h  diehard_rank_6x8.h  diehard_runs.h  diehard_squeeze.h  diehard_sums.h  dieharder_rng_types.h  dieharder_test_types.h  dieharder_types.h  libdieharder.h  marsaglia_tsang_gcd.h  parse.h  rgb_bitdist.h  rgb_kstest_test.h  rgb_lagged_sums.h  (+12 more)
libdieharder/: Makefile  Makefile.am  Makefile.in  Vtest.c  Xtest.c  add_lib_rngs.c  bits.c  chisq.c  configure.ac  countx.c  dab_birthdays1.c  dab_bytedistrib.c  dab_dct.c  dab_filltree.c  dab_filltree2.c  dab_monobit2.c  dab_opso2.c  diehard_2dsphere.c  diehard_3dsphere.c  diehard_birthdays.c  diehard_bitstream.c  diehard_count_1s_byte.c  diehard_count_1s_stream.c  diehard_craps.c  diehard_dna.new.c  diehard_dna.old.c  diehard_operm5.c  diehard_opso.c  diehard_oqso.c  diehard_parking_lot.c  diehard_predict_mersenne.c  diehard_rank_32x32.c  diehard_rank_6x8.c  diehard_runs.c  diehard_squeeze.c  diehard_sums.c  diehard_sums.cruft.c  dieharder_test_types.c  dieharder_types.c  get_bit_whatever  (+40 more)
libdieharder/.deps/: Vtest.Plo  Xtest.Plo  add_lib_rngs.Plo  bits.Plo  chisq.Plo  countx.Plo  diehard_2dsphere.Plo  diehard_3dsphere.Plo  diehard_birthdays.Plo  diehard_bitstream.Plo  diehard_count_1s_byte.Plo  diehard_count_1s_stream.Plo  diehard_craps.Plo  diehard_dna.Plo  diehard_operm5.Plo  diehard_opso.Plo  diehard_oqso.Plo  diehard_parking_lot.Plo  diehard_rank_32x32.Plo  diehard_rank_6x8.Plo  diehard_runs.Plo  diehard_squeeze.Plo  diehard_sums.Plo  dieharder_types.Plo  kstest.Plo  libdieharder_la-rng_threefish.Plo  libdieharder_la-skein_block64.Plo  libdieharder_la-skein_block_ref.Plo  marsaglia_tsang_gcd.Plo  marsaglia_tsang_gorilla.Plo  parse.Plo  prob.Plo  random_seed.Plo  rank.Plo  rgb_bitdist.Plo  rgb_lagged_sums.Plo  rgb_lmn.Plo  rgb_minimum_distance.Plo  rgb_operm.Plo  rgb_permutations.Plo  (+20 more)
manual/: Makefile  Makefile.am  Makefile.in  dieharder.aux  dieharder.dvi  dieharder.out  dieharder.tex  dieharder.toc  m.aux  macros.tex  macros.tex.aux  macros.tex.in
